omni/tests/goldens/types/undefined_ident_06.omni
let result6:int = missing6
